--- a/src/slices/Localisation/mocks.json
+++ b/src/slices/Localisation/mocks.json
@@ -41,6 +41,30 @@
 						}
 					}
 				]
+			},
+			"content": {
+				"__TYPE__": "GroupContentType",
+				"value": [
+					{
+						"__TYPE__": "GroupItemContent",
+						"value": [
+							[
+								"info",
+								{
+									"__TYPE__": "StructuredTextContent",
+									"value": [
+										{
+											"type": "paragraph",
+											"content": {
+												"text": "Duis ex sunt est cupidatat consectetur. Fugiat elit incididunt aliquip nisi esse reprehenderit ut eu deserunt culpa incididunt esse aliquip fugiat ut. Duis sit voluptate non Lorem enim proident."
+											}
+										}
+									]
+								}
+							]
+						]
+					}
+				]
 			}
 		},
 		"items": []
