--- a/src/slices/Localisation/model.json
+++ b/src/slices/Localisation/model.json
@@ -12,6 +12,24 @@
       "description": "Default",
       "imageUrl": "",
       "primary": {
+        "content": {
+          "type": "Group",
+          "config": {
+            "label": "Content",
+            "repeat": true,
+            "fields": {
+              "info": {
+                "type": "StructuredText",
+                "config": {
+                  "label": "Info",
+                  "placeholder": "Informations concernant l'agence",
+                  "allowTargetBlank": true,
+                  "multi": "paragraph,preformatted,heading1,heading2,heading3,heading4,heading5,heading6,strong,em,hyperlink,list-item,o-list-item,rtl"
+                }
+              }
+            }
+          }
+        },
         "title": {
           "type": "Text",
           "config": {
